// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update space_views 1`] = `
Object {
  "alive": true,
  "joined": false,
  "last_edited_by_id": "user_root_1",
  "last_edited_by_table": "notion_user",
  "last_edited_time": Any<Number>,
}
`;

exports[`update space_views 2`] = `
Array [
  Object {
    "args": Object {
      "joined": false,
      "last_edited_by_id": "user_root_1",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "space_view_1",
    "path": Array [],
    "table": "space_view",
  },
  Object {
    "args": Object {
      "last_edited_by_id": "user_root_1",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
    },
    "command": "update",
    "id": "user_root_1",
    "path": Array [],
    "table": "user_root",
  },
]
`;
